package edu.fiuba.algo3.modelo;

public class Vehiculo {
    protected int cantidadDeMovimientos;
    protected Posicion pos;

    public void mover(Direccion dir) {

    }

    public void atravesarPozo() {

    }

    public void atravesarPiquete(){

    }

    public void atravesarControlPolicial(){

    }

    public int getMovimientos(){
        return cantidadDeMovimientos;
    }
}
